# unichecker

./: .env.example  .gitignore  Cargo.toml  README.md  rustfmt.toml
abi/: UniswapV2Pair.abi.json
cache/: actual_pools.txt
output/: pools_data_51796222_53147002.json
src/: config.rs  main.rs  types.rs
src/contracts/: erc20.rs  factory.rs  mod.rs  uniswap_pair.rs
src/services/: storage.rs
