[package]
name = "unichecker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
config = "0.14.0"
dotenv = "0.15.0"
env_logger = "0.11.1"
hex = "0.4.3"
log = "0.4.14"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.15.0", features = ["fs"]}
url = { features = ["serde"], version = "2.5.0" }
web3 = "0.19.0"
